--- a/index.html
+++ b/index.html
@@ -68,6 +68,50 @@
 	</div>
 	<!-- Background image -->
 
+	<div class="container contact-info">
+		<div class="row range p-5 d-flex justify-content-center">
+			<div class="col-md-3 mb-5 mb-md-0">
+				<h4>OUR ADVANTAGES</h4>
+				<hr class="mb-4 mt-0 d-inline-block mx-auto hr-title"/>
+
+				<ul class="list-unstyled">
+                  <li class="mb-2"><i class="bi bi-check2"></i> Free Diagnostics &amp; Brake Check</li>
+                  <li class="mb-2"><i class="bi bi-check2"></i> Certified repair services</li>
+                  <li class="mb-2"><i class="bi bi-check2"></i> Fair price repair estimates</li>
+                </ul>
+			</div>
+			<div class="col-md-3 mb-5 mb-md-0">
+				<h4>OPENING HOURS</h4>
+				<hr class="mb-4 mt-0 d-inline-block mx-auto hr-title"/>
+
+				<table class="table">
+                    <tbody class="fw-normal">
+                        <tr>
+                            <td>Weekdays:</td>
+                            <td>8am - 9pm</td>
+                        </tr>
+                        <tr>
+                            <td>Saturday:</td>
+                            <td>8am - 1am</td>
+                        </tr>
+                        <tr>
+                            <td>Sunday:</td>
+                            <td>9am - 10pm</td>
+                        </tr>
+                    </tbody>
+                </table>
+			</div>
+			<div class="col-md-3">
+				<h4>GET IN TOUCH</h4>
+				<hr class="mb-4 mt-0 d-inline-block mx-auto hr-title"/>
+
+				<h5 class="text-primary fw-bold">(415) 347-3160</h5>
+				<p class="lead"><text class="fw-bold">Mobile:</text> 02 562-958</p>
+				<p class="lead"><text class="fw-bold">Fax:</text> 02 562-95</p>
+			</div>
+		</div>
+	</div>
+
 	<main class="pt-5">
 		<div class="my-5">
             <div class="container">
@@ -121,7 +165,6 @@
 
 	</main>
 
-	<!-- Remove the container if you want to extend the Footer to full width. -->
 	<div class="mt-5">
 		<!-- Footer -->
 		<footer class="bg-dark text-center text-white">
@@ -189,112 +232,110 @@
 				</section>
 				<!-- Section: Text -->
 
-		<!-- Section: Links -->
-		<section class="">
-		<!--Grid row-->
-		<div class="row">
-		<!--Grid column-->
-		<div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-		<h5 class="text-uppercase">Links</h5>
+				<!-- Section: Links -->
+				<section class="">
+					<!--Grid row-->
+					<div class="row">
+						<!--Grid column-->
+						<div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+							<h5 class="text-uppercase">Links</h5>
 
-		<ul class="list-unstyled mb-0">
-		<li>
-		<a href="#!" class="text-white">Link 1</a>
-		</li>
-		<li>
-		<a href="#!" class="text-white">Link 2</a>
-		</li>
-		<li>
-		<a href="#!" class="text-white">Link 3</a>
-		</li>
-		<li>
-		<a href="#!" class="text-white">Link 4</a>
-		</li>
-		</ul>
-		</div>
-		<!--Grid column-->
+							<ul class="list-unstyled mb-0">
+								<li>
+									<a href="#!" class="text-white">Link 1</a>
+								</li>
+								<li>
+									<a href="#!" class="text-white">Link 2</a>
+								</li>
+								<li>
+									<a href="#!" class="text-white">Link 3</a>
+								</li>
+								<li>
+									<a href="#!" class="text-white">Link 4</a>
+								</li>
+							</ul>
+						</div>
+						<!--Grid column-->
 
-		<!--Grid column-->
-		<div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-		<h5 class="text-uppercase">Links</h5>
+						<!--Grid column-->
+						<div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+							<h5 class="text-uppercase">Links</h5>
 
-		<ul class="list-unstyled mb-0">
-		<li>
-		<a href="#!" class="text-white">Link 1</a>
-		</li>
-		<li>
-		<a href="#!" class="text-white">Link 2</a>
-		</li>
-		<li>
-		<a href="#!" class="text-white">Link 3</a>
-		</li>
-		<li>
-		<a href="#!" class="text-white">Link 4</a>
-		</li>
-		</ul>
-		</div>
-		<!--Grid column-->
+							<ul class="list-unstyled mb-0">
+								<li>
+									<a href="#!" class="text-white">Link 1</a>
+								</li>
+								<li>
+									<a href="#!" class="text-white">Link 2</a>
+								</li>
+								<li>
+									<a href="#!" class="text-white">Link 3</a>
+								</li>
+								<li>
+									<a href="#!" class="text-white">Link 4</a>
+								</li>
+							</ul>
+						</div>
+						<!--Grid column-->
 
-		<!--Grid column-->
-		<div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-		<h5 class="text-uppercase">Links</h5>
+						<!--Grid column-->
+						<div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+							<h5 class="text-uppercase">Links</h5>
 
-		<ul class="list-unstyled mb-0">
-		<li>
-		<a href="#!" class="text-white">Link 1</a>
-		</li>
-		<li>
-		<a href="#!" class="text-white">Link 2</a>
-		</li>
-		<li>
-		<a href="#!" class="text-white">Link 3</a>
-		</li>
-		<li>
-		<a href="#!" class="text-white">Link 4</a>
-		</li>
-		</ul>
-		</div>
-		<!--Grid column-->
+							<ul class="list-unstyled mb-0">
+								<li>
+									<a href="#!" class="text-white">Link 1</a>
+								</li>
+								<li>
+									<a href="#!" class="text-white">Link 2</a>
+								</li>
+								<li>
+									<a href="#!" class="text-white">Link 3</a>
+								</li>
+								<li>
+									<a href="#!" class="text-white">Link 4</a>
+								</li>
+							</ul>
+						</div>
+						<!--Grid column-->
 
-		<!--Grid column-->
-		<div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-		<h5 class="text-uppercase">Links</h5>
+						<!--Grid column-->
+						<div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+							<h5 class="text-uppercase">Links</h5>
 
-		<ul class="list-unstyled mb-0">
-		<li>
-		<a href="#!" class="text-white">Link 1</a>
-		</li>
-		<li>
-		<a href="#!" class="text-white">Link 2</a>
-		</li>
-		<li>
-		<a href="#!" class="text-white">Link 3</a>
-		</li>
-		<li>
-		<a href="#!" class="text-white">Link 4</a>
-		</li>
-		</ul>
-		</div>
-		<!--Grid column-->
-		</div>
-		<!--Grid row-->
-		</section>
-		<!-- Section: Links -->
-		</div>
-		<!-- Grid container -->
+							<ul class="list-unstyled mb-0">
+								<li>
+									<a href="#!" class="text-white">Link 1</a>
+								</li>
+								<li>
+									<a href="#!" class="text-white">Link 2</a>
+								</li>
+								<li>
+									<a href="#!" class="text-white">Link 3</a>
+								</li>
+								<li>
+									<a href="#!" class="text-white">Link 4</a>
+								</li>
+							</ul>
+						</div>
+						<!--Grid column-->
+					</div>
+					<!--Grid row-->
+				</section>
+				<!-- Section: Links -->
+			</div>
+			<!-- Grid container -->
 
-		<!-- Copyright -->
-		<div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-		© 2022 Copyright:
-		<a class="text-white" href="https://Intelatlas.com/">Intelatlas.com</a>
-		</div>
-		<!-- Copyright -->
+			<!-- Copyright -->
+			<div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+				© 2022 Copyright:
+				<a class="text-white" href="https://Intelatlas.com/">Intelatlas.com</a>
+			</div>
+			<!-- Copyright -->
 		</footer>
 		<!-- Footer -->
 	</div>
 	<!-- End of .container -->
-
-
 
 	<script src="https://getbootstrap.com/docs/5.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
