--- a/index.html
+++ b/index.html
@@ -114,7 +114,148 @@
 
 	<main class="pt-5">
 		<div class="my-5">
-            <div class="container">
+			<div class="container">
+				<div class="row">
+					<div class="col-12 text-center">
+						<h1 class="display-6">VEHICLE REPAIR SERVICES</h1>
+						<p class="lead">
+							We are one of the leading auto repair shops serving customers around the area. <br>
+							All repair services are performed by highly qualified mechanics.
+						</p>
+					</div>
+
+					<div class="d-flex justify-content-center col-md-10 mx-auto my-5">
+						<div class="row">
+							<div class="col-md-6">
+								<div class="card mb-3">
+									<div class="row g-0">
+										<div class="col-4">
+											<img src="https://ld-wt73.template-help.com/wt_prod-22953/images/home-04-210x210.jpg" class="img-fluid rounded-start" alt="Service 1">
+										</div>
+										<div class="col-8">
+											<div class="card-body">
+												<h5 class="card-title">BRAKE REPAIR</h5>
+												<hr class="mb-4 mt-0 d-inline-block mx-auto hr-title"/>
+												<p class="card-text">From the brake pedal to hydraulic brake fluid, our technicians can perform brake repair on any make and model.</p>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+
+							<div class="col-md-6">
+								<div class="card mb-3">
+									<div class="row g-0">
+										<div class="col-4">
+											<img src="https://ld-wt73.template-help.com/wt_prod-22953/images/home-05-210x210.jpg" class="img-fluid rounded-start" alt="Service 1">
+										</div>
+										<div class="col-8">
+											<div class="card-body">
+												<h5 class="card-title">ENGINE REPAIR</h5>
+												<hr class="mb-4 mt-0 d-inline-block mx-auto hr-title"/>
+												<p class="card-text">We take the welfare of your engine seriously and offer services to prevent the need for future engine replacement.</p>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+
+							<div class="col-md-6">
+								<div class="card mb-3">
+									<div class="row g-0">
+										<div class="col-4">
+											<img src="https://ld-wt73.template-help.com/wt_prod-22953/images/home-06-210x210.jpg" class="img-fluid rounded-start" alt="Service 1">
+										</div>
+										<div class="col-8">
+											<div class="card-body">
+												<h5 class="card-title">OIL CHANGE</h5>
+												<hr class="mb-4 mt-0 d-inline-block mx-auto hr-title"/>
+												<p class="card-text">One of the most effective and inexpensive ways to help protect your car, is to change the oil and the oil filter regularly.</p>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+
+							<div class="col-md-6">
+								<div class="card mb-3">
+									<div class="row g-0">
+										<div class="col-4">
+											<img src="https://ld-wt73.template-help.com/wt_prod-22953/images/home-07-210x210.jpg" class="img-fluid rounded-start" alt="Service 1">
+										</div>
+										<div class="col-8">
+											<div class="card-body">
+												<h5 class="card-title">WHEEL CHANGE</h5>
+												<hr class="mb-4 mt-0 d-inline-block mx-auto hr-title"/>
+												<p class="card-text">We provide extensive wheel change services that include emergency tire replacement when you are on the road.</p>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="my-5">
+			<div class="container">
+				<div class="row d-flex justify-content-center">
+
+					<div class="col-md-6">
+						<h1 class="display-6 text-center mb-5">WHAT OUR CLIENTS SAY</h1>
+						<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+							<div class="carousel-indicators">
+								<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+								<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+								<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+							</div>
+							<div class="carousel-inner">
+								<div class="carousel-item active">
+									<center>
+										<img src="https://ld-wt73.template-help.com/wt_prod-22953/images/home-09-302x302.jpg" class="d-block w-50 img-circle">
+									</center>
+									<div class="carousel-caption d-none d-md-block text-dark">
+										<h5>PETER SMITH</h5>
+										<p>I have been going to Car Repair for almost four years now, and have always received great service and fair prices. They always go out of their way to finish the work on time, and if it’s very busy they will rent a car. Also, you can’t beat their National Certified Auto Guarantee.</p>
+									</div>
+								</div>
+								<div class="carousel-item">
+									<center>
+										<img src="https://ld-wt73.template-help.com/wt_prod-22953/images/home-10-302x302.jpg" class="d-block w-50 img-circle">
+									</center>
+									<div class="carousel-caption d-none d-md-block text-dark">
+										<h5>KATE MCMILLAN</h5>
+										<p>I love Car Repair because they treat their customers with special knowledge of all auto repairs, big or small. They are always courteous and friendly and contact you about any extra needed repairs before the work is done. I would recommend them to everyone for your auto needs.</p>
+									</div>
+								</div>
+								<div class="carousel-item">
+									<center>
+										<img src="https://ld-wt73.template-help.com/wt_prod-22953/images/home-10-302x302.jpg" class="d-block w-50 img-circle">
+									</center>
+									<div class="carousel-caption d-none d-md-block text-dark">
+										<h5>JANE WILLIAMS</h5>
+										<p>I have been going to Car Repair for almost four years now, and have always received great service and fair prices. They always go out of their way to finish the work on time, and if it’s very busy they will rent a car. Also, you can’t beat their National Certified Auto Guarantee.</p>
+									</div>
+								</div>
+							</div>
+							<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+								<span class="carousel-control-prev-icon text-muted" aria-hidden="true"></span>
+								<span class="visually-hidden">Previous</span>
+							</button>
+							<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+								<span class="carousel-control-next-icon text-muted" aria-hidden="true"></span>
+								<span class="visually-hidden">Next</span>
+							</button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="my-5">
+            <div class="container pt-5">
                 <div class="row">
                     <div class="col-lg-4 text-center text-lg-start">
                         <div class="card mb-3">
