--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link href="assets/css/style.css" rel="stylesheet">
 </head>
 <body>
-	<header class="p-3 mb-3 border-bottom">
+	<header class="p-3 mb-3 border-bottom fixed-top">
 		<div class="container">
 			<div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
 				<a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none text-gold fw-bolder text-uppercase">
@@ -56,8 +56,8 @@
 		</div>
 	</header>
 
-	<main>
-		<div class="container my-md-5 py-md-5">
+	<main class="mt-5 pt-5 pt-md-2">
+		<div class="container mt-5 pt-5">
 			<div class="row">
 				<div class="col-md-4">
 					<figure class="figure">
@@ -108,8 +108,76 @@
 				</div>
 			</div>
 		</div>
-	</main>
 
+		<div class="">
+
+  			<footer class="text-white text-center text-lg-start bg-dark">
+			    <div class="container p-4">
+					<div class="row mt-4">
+						<div class="col-lg-8 col-md-12 mb-4 mb-md-0">
+							<h5 class="text-uppercase mb-4">About company</h5>
+							<div class="row">
+								<div class="col-md-6 mb-3">
+									<p>
+										At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
+										voluptatum deleniti atque corrupti.
+									</p>
+									<p>
+										Blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas
+										molestias.
+									</p>
+
+									<div class="mt-4">
+										<!-- Facebook -->
+										<span><i class="bi bi-facebook fs-4 me-3"></i></span>
+										<!-- Twitter -->
+										<span><i class="bi bi-twitter fs-4 me-3"></i></span>
+										<!-- whatsapp + -->
+										<span><i class="bi bi-whatsapp fs-4"></i></span>
+									</div>
+	          					</div>
+
+					          	<div class="col-md-6">
+					          		<ul>
+							            <li class="mb-2 ullist">
+							              <i class="bi bi-house-fill"></i> <span class="ms-2">Warsaw, 00-967, Poland</span>
+							            </li>
+							            <li class="mb-2 ullist">
+							              <i class="bi bi-send-check-fill"></i> <span class="ms-2">contact@example.com</span>
+							            </li>
+							            <li class="mb-2 ullist">
+							              <i class="bi bi-headset"></i> <span class="ms-2">+ 48 234 567 88</span>
+							            </li>
+							          </ul>
+					          	</div>
+        					</div>
+        				</div>
+
+						<div class="col-lg-4 col-md-6 mb-4 mb-md-0">
+							<h5 class="text-uppercase mb-4">Sign up to our newsletter</h5>
+
+							<div class="form-floating mb-4 text-dark">
+								<input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" autocomplete="off">
+								<label for="floatingInput">Email address</label>
+							</div>
+
+							<div class="d-grid gap-2">
+								<button class="btn btn-outline-light" type="button">SUBSCRIBE</button>
+							</div>
+
+						</div>
+    				</div>
+    			</div>
+
+				<!-- Copyright -->
+				<div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+					© 2022 Copyright:
+					<a class="text-white" href="https://intelatlas.com/">Intelatlas.com</a>
+				</div>
+				<!-- Copyright -->
+			</footer>
+		</div>
+	</main>
 
 	<script src="https://getbootstrap.com/docs/5.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
